--- a/index.html
+++ b/index.html
@@ -3,103 +3,55 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  
-  <title>Frontend Mentor | Interactive card details form</title>
-
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <title>Frontend Mentor | Calculator app</title>
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
-  <link rel="stylesheet" href="index.css">
-</head>
+      <link rel="stylesheet" href="C:\Users\Vignesh\Downloads\bootstrap-5.3.0\bootstrap-5.3.0\dist\css\bootstrap.css">
+      <link rel="stylesheet" href="index.css">
+    </head>
 <body>
-<!---
-  0000 0000 0000 0000
-  Jane Appleseed
-  00/00
-
-  000
-
-  Cardholder Name
-  e.g. Jane Appleseed
-
-  Card Number
-  e.g. 1234 5678 9123 0000
-
-  Exp. Date (MM/YY)
-  MM
-  YY
-
-  CVC
-  e.g. 123
-
-  Confirm
-  --->
-  <div class="card-front">
-    <img src="card-logo.svg" alt="front side card image">
-    <h2 id="cardnum">  0000 0000 0000 0000
-    </h2>
-    <p>
-      <span id="cardname" style="width:70%">  Jane Appleseed </span>
-      <span id="cardexpdate1">00</span>/<span id="cardexpdate2">00</span>
-
-     </p>
-  </div>
-  <div class="card-back" >
-    <p id="cardcvc">000</p>
-  </div>
-  
-  <div class="des-design">
-<!----    <img src="bg-main-desktop.png" alt="" width="100%" height="100%">    -->
-  </div>
-  <div id="form">
-    <div id="success">
-      <img src="icon-complete.svg" alt="success icon">
-      <h1>Thank you!</h1>
-      <div id="pbs">
-        <p>We've added your card details</p>
-      <button>  Continue</button>
-      </div>
-      
+<div class="calci">
+  <div class="contain">
+    <h1 >calc</h1>
+    <p class="col1">theme</p>
+    <div id="scroll">
+      <p id="span"><span>1</span><span>2</span><span>3</span></p>
+    <input type="range" name="" id="myrange" min="0" max="2" value="0" class="col">
     </div>
-    <form action="" >
-      <label for="name"> Cardholder Name</label>
-      <input  class="inputs" type="text" placeholder=" e.g. Jane Appleseed" id="name">
-      <div class="namerr err">cant be blank</div>
-      <label for="cardno">  Card Number</label>
-      <input  class="inputs" type="number" name="" placeholder="  e.g. 1234 5678 9123 0000" id="num">
-      <div class="numerr err">cant be blank</div>
-      <div class="cdelab">
-      <label for="expdate">  Exp. Date (MM/YY)</label>
-      <label for="cvc" id="cvlabel">  CVC </label>
+  </div>
+    <div class="display">
     </div>
-      <div class="cdeip">      
-        <div class="date">
-          <div class="ipdate">
-          <input  class="inputs" type="number" style="width:40%" name="" min="1" max="12" placeholder="MM" id="expmonth">
-          <input  class="inputs" type="number" style="width:40%" name="" min="25" max="45" placeholder="YY" id="expyear">
-          </div>
-          <div class="dateerr1 err">cant be blank</div>
+    <div class="keyboard ">
+        <div class=" btn1">
+            <button class="num " id="7" value="7">7</button>
+            <button class="num " id="8" value="8">8</button>
+            <button class="num " id="9" value="9">9</button>
+            <button class="oper2 " id="backspace">DEL</button>
+            <button class="num " id="4" value="4">4</button>
+            <button class="num " id="5" value="5">5</button>
+            <button class="num " id="6" value="6">6</button>
+            <button class="oper" id="+" value="+">+</button>
+            <button class="num " id="1" value="1">1</button>
+            <button class="num " id="2" value="2">2</button>
+            <button class="num " id="3" value="3">3</button>
+            <button class="oper " id="-" value="-">-</button>
+            <button class="num " id="pt" value=".">.</button>
+            <button class="num " id="0" value="0">0</button>
+            <button class="oper " id="/" value="/">/</button>
+            <button class="oper " id="x" value="*">x</button>
         </div>
-      <div class="cv">
-        <input  class="inputs" type="number" style="width:70%" placeholder=" e.g. 123" id="cvc" minlength="3" maxlength="4">
-        <div class="cverr err">cant be blank</div>
-      </div>  
+        <div class="btn2">
+            <button class="oper2 " id="clear">RESET</button>
+            <button class="oper2 " id="equal">=</button>
+        </div>
     </div>
-      <button type="submit" id="verify">Confirm</button>
-    </form>
-  </div>
+</div>
+<script src="index.js">
 
-  <!-- Completed state start 
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
--->
-  <script src="index.js"></script>
+</script>
 </body>
 </html>
