--- a/index.html
+++ b/index.html
@@ -1,57 +1,82 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <title>Frontend Mentor | Calculator app</title>
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+
+  <link rel="icon" type="image/png" sizes="32x32" href=" favicon-32x32.png">
+  
+  <title>Frontend Mentor | Rock, Paper, Scissors</title>
+  <link rel="stylesheet" href="index.css">
+  <!--Score
+  Rules
+
+  You Picked
+  The House Picked
+
+  You Win
+  You Lose
+
+  Play Again
+ -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
-      <link rel="stylesheet" href="C:\Users\Vignesh\Downloads\bootstrap-5.3.0\bootstrap-5.3.0\dist\css\bootstrap.css">
-      <link rel="stylesheet" href="index.css">
-    </head>
+</head>
 <body>
-<div class="calci">
   <div class="contain">
-    <h1 >calc</h1>
-    <p class="col1">theme</p>
-    <div id="scroll">
-      <p id="span"><span>1</span><span>2</span><span>3</span></p>
-    <input type="range" name="" id="myrange" min="0" max="2" value="0" class="col">
+    <div class="titlebox">
+      <img src="logo.svg"id="logo" alt="logo">
+      <div class="scorebox">
+        <p>SCORE</p>
+        <h1 id="score" value="10">10</h1>
+      </div>
+    </div>
+    <div class="step2">
+      <div class="hd">
+        <h2>YOU PICKED</h2>
+        <h2>THE HOUSE PICKED</h2>
+      </div>
+      <div class="pick">
+       <div class="pick1"></div>
+       <div class="result">
+        <h1 id="h1"></h1>
+        <button id="play" onclick="playagain()">PLAY AGAIN</button>
+       </div>
+       <div class="pick2"></div> 
+      </div>
+    </div>
+  
+    <div class="bgtriangle">
+      <div class="tri paper" id="paper">
+        <img src=" icon-paper.svg"  alt="" >
+      </div>
+      <div class="tri scissor" id="scissor">
+        <img src=" icon-scissors.svg"  alt="" >
+      </div>
+      <div class="tri rock" id="rock">
+        <img src=" icon-rock.svg"  alt="" >
+      </div>
+    </div>
+    <button class="btn" onclick="show()">RULES</button>
+    <div id="mymodal" class="modal">
+      <!-- Modal content -->
+      <div class="modal-content">
+        <h1>RULES</h1>
+        <img src=" image-rules.svg" id="rules" alt="">
+        <img src=" icon-close.svg" id="close" alt="">
+      </div>
     </div>
   </div>
-    <div class="display">
-    </div>
-    <div class="keyboard ">
-        <div class=" btn1">
-            <button class="num " id="7" value="7">7</button>
-            <button class="num " id="8" value="8">8</button>
-            <button class="num " id="9" value="9">9</button>
-            <button class="oper2 " id="backspace">DEL</button>
-            <button class="num " id="4" value="4">4</button>
-            <button class="num " id="5" value="5">5</button>
-            <button class="num " id="6" value="6">6</button>
-            <button class="oper" id="+" value="+">+</button>
-            <button class="num " id="1" value="1">1</button>
-            <button class="num " id="2" value="2">2</button>
-            <button class="num " id="3" value="3">3</button>
-            <button class="oper " id="-" value="-">-</button>
-            <button class="num " id="pt" value=".">.</button>
-            <button class="num " id="0" value="0">0</button>
-            <button class="oper " id="/" value="/">/</button>
-            <button class="oper " id="x" value="*">x</button>
-        </div>
-        <div class="btn2">
-            <button class="oper2 " id="clear">RESET</button>
-            <button class="oper2 " id="equal">=</button>
-        </div>
-    </div>
-</div>
-<script src="index.js">
-
-</script>
+  
+<!---
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Your Name Here</a>.
+  </div>
+  --->
+  <script src="index.js"></script>
 </body>
 </html>
